--- a/public/index.html
+++ b/public/index.html
@@ -4,18 +4,26 @@
         <title>Music Sence</title>
     </head>
     <body>
-        <script type="text/javascript" src="app.js"></script>
-        <script type="text/javascript" src="templates.js"></script>
+        <div data-role="page-container">
+            ...
+        </div>
+
+        <script type="text/javascript" src="built.js"></script>
         <script type="text/javascript">
             $(function() {
 
                 // Инициализация приложения
                 window.app = new App.Application({
-                    'api_host': 'https://10tracks.com/api'
+                    'api_host': 'http://10tracks.ru:8000/api'
                 });
 
                 // Запуск приложения
                 window.app.start();
+
+                // Тестирование
+                if ( ! window.app.userManager.isAuthorized()) {
+                    window.app.userManager.authenticate('andrey@sixdays.ru', '2BhL9OiN');
+                }
             });
         </script>
     </body>
