Метод регистрации пользователя

--- a/public/index.html
+++ b/public/index.html
@@ -21,9 +21,9 @@
                 window.app.start();
 
                 // Тестирование
-                if ( ! window.app.userManager.isAuthorized()) {
-                    window.app.userManager.authenticate('andrey@sixdays.ru', '2BhL9OiN');
-                }
+                // if ( ! window.app.userManager.isAuthorized()) {
+                //     window.app.userManager.authenticate('andrey@sixdays.ru', '2BhL9OiN');
+                // }
             });
         </script>
     </body>
