--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,113 @@
 <!DOCTYPE html>
+
 <html>
     <head>
-        <title>Music Sence</title>
+        <title>Music Sense</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="css/bootstrap.css" rel="stylesheet" type="text/css"/> <!-- Bootstrap CSS-->
+        <link href="css/bootstrap-theme.css" rel="stylesheet" type="text/css"/><!-- Bootstrap Theme-->
+        <link href="css/font-awesome.min.css" rel="stylesheet" type="text/css"/><!-- Font Awesome -->
+        <link href="css/normalize.css" rel="stylesheet" type="text/css"/>
+        <link href="css/demo.css" rel="stylesheet" type="text/css"/>
+        <link href="css/component.css" rel="stylesheet" type="text/css"/>
+
+        <link href="css/style.css" rel="stylesheet" type="text/css"/>
+
+        <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400' rel='stylesheet' type='text/css'>
     </head>
     <body>
-        <div data-role="page-container">
-            ...
+
+        <div id="header">
+            <div id="logo">
+                <a href="index.html" class="logo"><img src="images/logo.png" alt=""/></a>
+
+            </div>
+
+            <p class="sense"> <img src="images/music_sense.png" alt=""/></p>
+
+
+        </div>
+        <div class="center">
+            <div class="container">
+                <div class="row">
+
+                    <div class="col-md-4 col-md-offset-4">
+                        <p class="welcome">
+                            Welcome to
+
+                        </p>
+                        <p class="music">
+                            Music Sense
+                        </p>
+                    </div>
+
+                </div>
+                <div id="social">
+                    <div class="row">
+                        <div class="col-md-4 col-md-offset-4">
+                            <span class="social"><i class="fa fa-facebook"></i></span>
+                            <span class="social"><i class="fa fa-google-plus"></i></span>
+                            <span class="social"><i class="fa fa-vk"></i></span>
+                        </div>
+
+                    </div>
+                </div>
+                <div id="register">
+                    <div class="row">
+                    <div class="col-md-4 col-md-offset-4">
+                        <button type="button" class="register_btn">Register</button>
+                        <br>
+                         <button type="button" class="login_btn">Login</button>
+
+                        </div>
+                </div>
+                </div>
+
+            </div>
+        </div>
+        <div class="modal_reg">
+            <div class="register_div">
+                <p>Registration</p>
+                <p>You'll create your 10tracks account. You can <a href="#">Login</a> instead</p>
+                <div class="form">
+                    <form action="" method="">
+                        <input type="text" name="login" placeholder="Type your login"><br>
+                        <input type="email" name="email" placeholder="Type your email"><br>
+                        <input type="password" name="password" placeholder="Type your password"><br>
+                        <div class="events">
+                            <a class="cancel">Cancel</a>
+                            <input type="submit" value="Complete">
+                        </div>
+                    </form>
+
+                </div>
+            </div>
+
+        </div>
+        <div class="modal_login">
+            <div class="register_div">
+                <p>Login</p>
+                <p>If you don't have an account you can <a href="#">Register</a> </p>
+                <div class="form">
+                    <form action="" method="">
+                        <input type="text" name="login" placeholder="Type your login or email"><br>
+
+                        <input type="password" name="password" placeholder="Type your password"><br>
+                        <a href="#" class="remember">Remember password</a>
+                        <div class="events">
+                            <a class="cancel">Cancel</a>
+                            <input type="submit" value="Complete">
+                        </div>
+                    </form>
+
+                </div>
+            </div>
+
         </div>
 
-        <script type="text/javascript" src="built.js"></script>
+        <script src="built.js" type="text/javascript"></script>
+        <script src="js/script.js" type="text/javascript"></script>
         <script type="text/javascript">
             $(function() {
 
