--- a/public/player.html
+++ b/public/player.html
@@ -38,12 +38,12 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-4 col-md-offset-4">
-
-                        <span class="heart" id="disable"><i class="fa fa-heart"></i></span>
+                        <span class="heart" id="disable">
+                            <i class="fa fa-heart"></i>
+                        </span>
                         <div class="circle">
                             <span class="play"><i class="fa fa-play"></i></span>
                         </div>
-
                         <span class="forward"><i class="fa fa-forward"></i></span>
                     </div>
 
