Удалены лишние скрипты и шаблоны

--- a/public/index.html
+++ b/public/index.html
@@ -5,28 +5,28 @@
 	<title>Musicsense - new generation of music services more personalized, clean design and smart alghoritms</title>
 	<meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+
     <!-- Bootstrap -->
 	<!--<link rel="stylesheet/less" type="text/css" href="assets/less/bootstrap.less">	-->
 	<link rel="stylesheet" type="text/css" href="assets/css/bootstrap.css">
 
 	<!-- Styles -->
 	<!--<link rel="stylesheet/less" type="text/css" href="assets/less/main.less">-->
-	<link rel="stylesheet" type="text/css" href="assets/css/main.css">	
-	
+	<link rel="stylesheet" type="text/css" href="assets/css/main.css">
+
 	<link rel="stylesheet" href="assets/css/font-awesome.min.css">
-	
-	<!-- Plugins Styles -->	
+
+	<!-- Plugins Styles -->
 	<link rel="stylesheet" href="assets/plugins/owl-carousel/owl.carousel.css">
 	<link rel="stylesheet" href="assets/plugins/owl-carousel/owl.theme.css">
 	<link rel="stylesheet" href="assets/plugins/fullPage/jquery.fullPage.css">
-	
+
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
     <![endif]-->
-     
+
 </head>
 
 <body>
@@ -43,15 +43,15 @@
 			<span class="icon-bar"></span>
 			<span class="icon-bar"></span>
 		  </button>
-		  <a class="navbar-brand" href="#home">
+		  <a class="navbar-brand" href="/index.html#home">
 		  	<img src="assets/images/logo.png" alt="musicsense"/>
 		  </a>
 		</div>
-		<div class="navbar-collapse collapse" id="navbar-collapse">		
+		<div class="navbar-collapse collapse" id="navbar-collapse">
 			<div class="btn-toolbar navbar-form  navbar-right">
 <!--				<a type="button" class="btn btn-info"><small>Login</small></a>
 				<a type="button" class="btn btn-default"><small>Register</small></a>-->
-				<a type="button" class="btn btn-default" href="login.html"><small>early access for web version</small></a>
+				<a type="button" class="btn btn-default" href="player.html"><small>early access for web version</small></a>
 			</div>
 		</div><!--/.nav-collapse -->
 	  </div><!--/.container -->
@@ -95,15 +95,15 @@
 				<div id="carousel" class="owl-carousel">
 					<div class="description">
 						<h2>Generate playlists 1</h2>
-						<h4>Every time you click on song we generate a new playlist based on your current location, moving behaviour and playing song.</h3>	
+						<h4>Every time you click on song we generate a new playlist based on your current location, moving behaviour and playing song.</h3>
 					</div>
 					<div class="description">
 						<h2>Generate playlists 2</h2>
-						<h4>Every time you click on song we generate a new playlist based on your current location, moving behaviour and playing song.</h4>	
+						<h4>Every time you click on song we generate a new playlist based on your current location, moving behaviour and playing song.</h4>
 					</div>
 					<div class="description">
 						<h2>Generate playlists 3</h2>
-						<h4>Every time you click on song we generate a new playlist based on your current location, moving behaviour and playing song.</h4>	
+						<h4>Every time you click on song we generate a new playlist based on your current location, moving behaviour and playing song.</h4>
 					</div>
 				</div>
 			</div><!--col -->
@@ -114,19 +114,19 @@
 							<source src="assets/images/1.ogv" type="video/ogg">
 							<source src="assets/images/1.mp4" type="video/mp4">
 								Your browser does not support the video tag.
-						</video> 
+						</video>
 						<video class="screen-video"  >
 							<source src="assets/images/2.ogv" type="video/ogg">
 							<source src="assets/images/2.mp4" type="video/mp4">
 							<!--<source src="assets/images/demo2.ogv" type="video/ogg">-->
 							Your browser does not support the video tag.
-						</video> 
+						</video>
 						<video class="screen-video"  >
 							<source src="assets/images/3.ogv" type="video/ogg">
 							<source src="assets/images/3.mp4" type="video/mp4">
 							<!--<source src="assets/images/demo3.ogv" type="video/ogg">-->
 							Your browser does not support the video tag.
-						</video> 
+						</video>
 					</div>
 				</figure>
 			</div><!--col-->
@@ -159,10 +159,7 @@
 </div><!--main-wrap-->
 
 
-<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-<script src="assets/js/jquery-1.11.0.min.js"></script>
-<!-- Include BOOTSTRAP plugins  -->
-<script src="assets/js/bootstrap.min.js"></script>
+<script src="built/built.js"></script>
 <!-- Include custom plugins  -->
 <script src="assets/plugins/owl-carousel/owl.carousel.min.js"></script>
 <script src="assets/plugins/jquery.typer.js/jquery.typer.js"></script>
@@ -170,9 +167,9 @@
 <script src="assets/plugins/fullPage/vendors/jquery.easings.min.js"></script>
 <script type="text/javascript" src="assets/plugins/fullPage/vendors/jquery.slimscroll.min.js"></script>
 
-<!-- Include LESS -->   
+<!-- Include LESS -->
 <script type="text/javascript" src="assets/js/less-1.7.0.min.js"></script>
-<!-- Include local script calls -->  
+<!-- Include local script calls -->
 <script src="assets/js/custom.js"></script>
 
 </body>
