- Работающая верстка логина и регистрации - Другие урлы в server.js

--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
 			<span class="icon-bar"></span>
 			<span class="icon-bar"></span>
 		  </button>
-		  <a class="navbar-brand" href="/index.html#home">
+		  <a class="navbar-brand" href="/#home">
 		  	<img src="assets/images/logo.png" alt="musicsense"/>
 		  </a>
 		</div>
@@ -51,7 +51,7 @@
 			<div class="btn-toolbar navbar-form  navbar-right">
 <!--				<a type="button" class="btn btn-info"><small>Login</small></a>
 				<a type="button" class="btn btn-default"><small>Register</small></a>-->
-				<a type="button" class="btn btn-default" href="player.html"><small>early access for web version</small></a>
+				<a type="button" class="btn btn-default" href="/player"><small>early access for web version</small></a>
 			</div>
 		</div><!--/.nav-collapse -->
 	  </div><!--/.container -->
