--- a/public/player.html
+++ b/public/player.html
@@ -2,12 +2,12 @@
 <html>
 
 <head>
-    <title>10Tracks</title>
+    <title>Musicsense - new generation of music services more personalized, clean design and smart alghoritms</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Bootstrap -->
-    <!--<link rel="stylesheet/less" type="text/css" href="/assets/less/bootstrap.less">  -->
+    <!--<link rel="stylesheet/less" type="text/css" href="/assets/less/bootstrap.less">	-->
     <link rel="stylesheet" type="text/css" href="/assets/css/bootstrap.css">
 
     <!-- Styles -->
@@ -17,12 +17,16 @@
     <link rel="stylesheet" href="/assets/css/font-awesome.min.css">
 
     <!-- Plugins Styles -->
-    <link rel="stylesheet" href="/assets/plugins/validator/bootstrapValidator.min.css">
+    <link rel="stylesheet" href="/assets/plugins/owl-carousel/owl.carousel.css">
+    <link rel="stylesheet" href="/assets/plugins/owl-carousel/owl.theme.css">
+    <!--<link rel="stylesheet" href="/assets/plugins/fullPage/jquery.fullPage.css">-->
+    <link rel="stylesheet" href="/assets/plugins/slider/bootstrap-slider.css">
+    <link rel="stylesheet" href="/assets/plugins/asPieProgress/progress.css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
+    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+    <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
     <![endif]-->
 
 </head>
